# quick-sync

./: .gitignore  Cargo.toml
.cargo/: config.toml
bin-crates/core-sdk/: Cargo.toml  build.rs
bin-crates/core-sdk/src/: main.rs
bin-crates/test-client/: Cargo.toml
bin-crates/test-client/src/: main.rs
lib-crates/client-sdk/: Cargo.toml
lib-crates/client-sdk/src/: lib.rs
lib-crates/client-sdk/src/error/: impl_display.rs  impl_from.rs  mod.rs
lib-crates/core/: Cargo.toml
lib-crates/core/src/: lib.rs
lib-crates/core/src/error/: mod.rs
lib-crates/core/src/error/core/: impl_display.rs  impl_from.rs  mod.rs
lib-crates/core/src/error/websocket/: impl_display.rs  impl_from.rs  mod.rs
lib-crates/core/src/socket/: mod.rs
lib-crates/env-config/: Cargo.toml
lib-crates/env-config/src/: lib.rs  static_env.rs
lib-crates/env-config/src/error/: impl_display.rs  impl_from.rs  mod.rs
lib-crates/sql-manager/: Cargo.toml
lib-crates/sql-manager/src/: lib.rs
lib-crates/sql-manager/src/error/: impl_display.rs  impl_from.rs  mod.rs
lib-crates/sql-manager/src/manager/: mod.rs
lib-crates/sql-manager/src/structs/entity/: mod.rs
lib-crates/sync-task-scheduler/: Cargo.toml
lib-crates/webdav-client/: Cargo.toml
lib-crates/webdav-client/src/: language.rs  lib.rs
lib-crates/webdav-client/src/client/: impl_webdav_client_trait.rs  mod.rs  webdav_struct.rs
lib-crates/webdav-client/src/client/enums/: mod.rs
lib-crates/webdav-client/src/client/error/: impl_display.rs  impl_friendly.rs  impl_from.rs  mod.rs
lib-crates/webdav-client/src/client/impl_traits/: impl_download.rs  impl_folder.rs  impl_friendly.rs  impl_safe_atomic_ops.rs  impl_url_parse.rs  impl_webdav_client_trait.rs  mod.rs
lib-crates/webdav-client/src/client/impl_traits/impl_download/: chunked_download_blacklist.rs  download_file.rs  gen_download_task.rs  handle_download.rs  mod.rs
lib-crates/webdav-client/src/client/structs/: friendly_xml.rs  impl_friendly.rs  mod.rs  raw_xml.rs  webdav_child_client.rs
lib-crates/webdav-client/src/client/traits/: download.rs  file_control.rs  folder.rs  mod.rs  safe_atomic_ops.rs  search.rs  upload.rs  url_trait.rs  webdav_client_trait.rs
lib-crates/webdav-client/src/error/: impl_display.rs  impl_friendly.rs  impl_from.rs  mod.rs
lib-crates/webdav-client/src/file_explorer/: mod.rs
lib-crates/webdav-client/src/file_explorer/enums/: mod.rs
lib-crates/webdav-client/src/file_explorer/error/: impl_display.rs  impl_friendly.rs  impl_from.rs  mod.rs
lib-crates/webdav-client/src/file_explorer/impl_traits/: mod.rs
lib-crates/webdav-client/src/public_enums/: mod.rs
lib-crates/webdav-client/src/public_traits/: friendly.rs  friendly_trait.rs  lang_trait.rs  mod.rs
lib-crates/webdav-client/src/traits/: client.rs  friendly_trait.rs  lang_trait.rs  mod.rs
lib-crates/webdav-client/tests/: client_test.rs  lib.rs
lib-crates/webdav-client/tests/traits_impl_test/: folder.rs  mod.rs  safe_atomic_ops.rs  url_trait.rs
lib-crates/windows-hooks/: Cargo.toml
