[package]
name = "webdav-client"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[features]
default = ["friendly-xml", "lang-en", "friendly-error"]
friendly-error = []
friendly-xml = []
lang-zh = []
lang-en = []

[package.metadata.no-overlapping-features]
groups = [
    ["lang-zh", "lang-en"]
]

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
percent-encoding = { workspace = true }

[dev-dependencies]
env-config = { workspace = true }
dotenvy = {workspace = true}