[package]
name = "webdav-client"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[features]
default = ["friendly-xml"]
friendly-xml = []
show-test-detail = []

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
    "gzip",
    "cookies",
] }
serde = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
percent-encoding = { workspace = true }
async-trait = {workspace = true}

[dev-dependencies]
dotenvy = { workspace = true }